cleaning the code